Calendar has Completed/Incomplete Consult Field

--- a/app/src/main/res/layout/activity_doctor_or_patientt.xml
+++ b/app/src/main/res/layout/activity_doctor_or_patientt.xml
@@ -4,33 +4,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F8F8FF"
+    android:background="@drawable/gradient_list"
+    android:id="@+id/layout"
     tools:context=".DoctorOrPatient">
 
 
     <TextView
-        android:id="@+id/textView"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="@color/white"
-        android:gravity="center_horizontal|center_vertical"
-        android:paddingLeft="15dp"
-        android:paddingTop="3dp"
-        android:paddingRight="15dp"
-        android:paddingBottom="3dp"
-        android:text="Hey there!"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textColor="@color/gradStop"
-        android:visibility="visible"
-        app:autoSizeTextType="none"
-        app:fontFamily="serif"
-        tools:visibility="visible" />
-
-    <TextView
         android:id="@+id/textView2"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="@color/white"
+        android:layout_width="wrap_content"
+        android:layout_height="52dp"
+        android:layout_below="@+id/textView"
+
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="69dp"
+        android:layout_marginLeft="69dp"
+        android:layout_marginEnd="57dp"
+        android:layout_marginRight="57dp"
+        android:layout_marginBottom="273dp"
         android:gravity="center_horizontal|center_vertical"
         android:paddingLeft="15dp"
         android:paddingTop="3dp"
@@ -39,58 +33,73 @@
         android:text="Are you a Patient or a Doctor?"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="@color/gradStop"
+        android:textSize="20sp"
         android:visibility="visible"
         app:autoSizeTextType="none"
-        app:fontFamily="serif"
-        android:layout_below="@+id/textView"
+        app:fontFamily="sans-serif"
         tools:visibility="visible" />
-
-    <View
-        android:id="@+id/view"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginBottom="628dp"
-        android:background="@color/gradStart"
-        android:layout_below="@+id/textView2"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:layout_below="@+id/imageView"
         android:layout_marginTop="70dp"
-        android:layout_below="@+id/imageView">
+        android:orientation="horizontal">
 
-    <Button
-        android:id="@+id/doctor"
-        android:layout_width="100dp"
-        android:layout_height="38dp"
-        android:background="@color/gradStop"
-        android:text="Doctor"
-        android:textColor="#FFFFFF"
-        android:layout_weight="1"
-        android:layout_marginLeft="64dp"
-        android:layout_marginRight="32dp"/>
-
-    <Button
-        android:id="@+id/patient"
-        android:layout_width="100dp"
-        android:layout_height="38dp"
-        android:background="@color/gradStop"
-        android:text="Patient"
-        android:textColor="#FFFFFF"
-        android:layout_weight="1"
-        android:layout_marginRight="64dp"
-        android:layout_marginLeft="32dp"/>
     </LinearLayout>
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
-        android:layout_marginTop="70dp"
         android:layout_height="208dp"
+        android:layout_above="@+id/textView2"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="130dp"
+        android:layout_marginBottom="66dp"
         android:paddingBottom="40dp"
-        android:src="@mipmap/ic_launcher"
-        android:layout_below="@+id/textView2"/>
+        android:src="@mipmap/ic_launcher" />
+
+    <Button
+        android:id="@+id/doctor"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="60dp"
+        android:layout_marginLeft="60dp"
+        android:layout_marginTop="521dp"
+        android:layout_marginEnd="214dp"
+        android:layout_marginRight="214dp"
+        android:layout_marginBottom="175dp"
+        android:layout_weight="1"
+        android:background="@color/gradStop"
+        android:text="Doctor"
+        android:textColor="#FFFFFF" />
+
+    <Button
+        android:id="@+id/patient"
+        android:layout_width="147dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="214dp"
+        android:layout_marginLeft="214dp"
+        android:layout_marginTop="521dp"
+        android:layout_marginEnd="60dp"
+        android:layout_marginRight="60dp"
+        android:layout_marginBottom="175dp"
+        android:layout_weight="1"
+        android:background="@color/gradStop"
+        android:text="Patient"
+        android:textColor="#FFFFFF" />
 
 
 </RelativeLayout>
