--- a/app/src/main/res/layout/acitivity_plogin.xml
+++ b/app/src/main/res/layout/acitivity_plogin.xml
@@ -6,33 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".LoginPatient">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-
-    </LinearLayout>
-
     <TextView
         android:id="@+id/btn_login"
         android:layout_width="wrap_content"
         android:layout_height="44dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="86dp"
-        android:layout_marginLeft="86dp"
-        android:layout_marginTop="103dp"
-        android:layout_marginEnd="58dp"
-        android:layout_marginRight="58dp"
-        android:layout_marginBottom="170dp"
+        android:layout_below="@+id/textViewResetPPass"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="64dp"
         android:background="@drawable/rounded_redfill"
         android:fontFamily="sans-serif-medium"
         android:gravity="center"
         android:text="LOGIN"
+        android:ems="12"
         android:textColor="#FFFFFF"
         android:textSize="18sp">
 
@@ -42,104 +27,65 @@
 
     <TextView
         android:id="@+id/textViewResetPPass"
-        android:layout_width="176dp"
+        android:layout_width="wrap_content"
         android:layout_height="19dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="156dp"
-        android:layout_marginLeft="156dp"
-        android:layout_marginTop="460dp"
-        android:layout_marginEnd="79dp"
-        android:layout_marginRight="79dp"
-        android:layout_marginBottom="252dp"
-        android:text="Forgot Password?"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.776" />
+        android:layout_below="@+id/editTextPPassword"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="24dp"
+        android:text="Forgot Password?"/>
 
     <TextView
         android:id="@+id/textViewPSignUp"
-        android:layout_width="208dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="126dp"
-        android:layout_marginLeft="126dp"
-        android:layout_marginTop="469dp"
-        android:layout_marginEnd="77dp"
-        android:layout_marginRight="77dp"
-        android:layout_marginBottom="117dp"
-        android:text="Not Registered? Signup Here!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.492"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.852" />
+        android:layout_below="@+id/btn_login"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="24dp"
+        android:text="Not Registered? Signup Here!" />
 
     <EditText
         android:id="@+id/editTextPPassword"
-        android:layout_width="268dp"
+        android:layout_width="wrap_content"
         android:layout_height="52dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="85dp"
-        android:layout_marginLeft="85dp"
-        android:layout_marginEnd="58dp"
-        android:layout_marginRight="58dp"
-        android:layout_marginBottom="311dp"
+        android:layout_below="@id/waveLayout"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="24dp"
         android:background="@drawable/rounded_corner_pending"
-        android:ems="10"
+        android:ems="12"
         android:hint="Password"
         android:inputType="textPassword" />
 
-    <FrameLayout
+    <RelativeLayout
+        android:id="@+id/waveLayout"
         android:layout_width="match_parent"
         android:layout_height="350dp"
-        android:layout_marginTop="0dp"
         android:background="@drawable/redwave">
 
         <ImageView
+            android:id="@+id/logoImage"
             android:layout_width="165dp"
             android:layout_height="165dp"
-            android:layout_gravity="center_horizontal"
+            android:layout_centerHorizontal="true"
             android:layout_marginTop="20dp"
-            android:src="@mipmap/ic_launcher" />
+            android:src="@mipmap/ic_launcher"  />
 
         <EditText
             android:id="@+id/editTextPEmail"
-            android:layout_width="257dp"
+            android:layout_width="wrap_content"
             android:layout_height="54dp"
-            android:layout_marginStart="85dp"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="280dp"
-            android:layout_marginEnd="117dp"
-            android:layout_marginRight="200dp"
-            android:layout_marginBottom="500dp"
-            android:layout_toRightOf="@+id/i_email"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="100dp"
+            android:layout_below="@id/logoImage"
             android:background="@drawable/rounded_corner_pending"
-            android:ems="10"
+            android:ems="12"
             android:hint="Email"
             android:inputType="textPersonName"
             android:paddingLeft="17dp"
             android:paddingTop="15dp"
-            android:paddingBottom="15dp" />
+            android:paddingBottom="15dp"/>
 
 
-    </FrameLayout>
+    </RelativeLayout>
 
 
 </RelativeLayout>
