--- a/app/src/main/res/layout/activity_p_home_page.xml
+++ b/app/src/main/res/layout/activity_p_home_page.xml
@@ -10,6 +10,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="fitEnd"
+            android:src="@drawable/heart" />
+
         <com.github.jhonnyx2012.horizontalpicker.HorizontalPicker
             android:id="@+id/datePicker"
             android:layout_width="match_parent"
